# tagProcess

./: .gitignore  README.md  pyproject.toml  tag-create.py
config/: config.yaml  tag-create-config.yaml  tag-create-refined.yaml
config[creation-prompts]/: danone_post.tpl  mane_mapping_skin_audience.tpl  mane_skin2.tpl
config[creation_prompts]/: danone_mapping_occasion.tpl  mane_mapping_skin_frequency.tpl  mane_skin.tpl
config[refined-templates]/: danone_refine_occasion.tpl  omega_refine_occupation.tpl  prompt.tpl
config[refined_templates]/: textobject_refine_prompt.tpl
conifg[promt_template]/: danone_mapping_product.tpl  tag_creation.tpl  tag_mapping.tpl
db/: db_init.py  openai_api.py
orm/: db_init.py  ops.py
prompts/: apple_ai.tpl  apple_battery.tpl  apple_gaming.tpl  apple_learn_curve.tpl  apple_supple.tpl  danone_mapping_baby.tpl  danone_mapping_infant.tpl  danone_prompt.tpl  mane_fra2.tpl  mane_frag_brand_name_mapping.tpl  mane_mapping_frag_metaphor.tpl  mane_mapping_frag_performance.tpl  mane_mapping_frag_personality.tpl  mane_mapping_frag_purpose.tpl  mane_mapping_frag_season.tpl  mane_mapping_skin_attitude.tpl  mane_mapping_skin_context.tpl  mane_mapping_skin_purpose.tpl  mane_mapping_skin_season.tpl  mane_skincare_brand_name_mapping.tpl  sanofi_1.tpl  skincare_prompt.tpl
refined-prompts/: init-prompt.tpl
refined-templates/: category_tag_refine_prompt.tpl  cons_refine_prompt.tpl  danone_refine_infant.tpl  danone_refine_product.tpl  omega_refine_focus_detail.tpl  omega_refine_lifestage.tpl  omega_refine_occasion.tpl
src/: tag-create.py  (+2 more)
(+46 files in other folders)
